--- a/InversePower/InversePower.ini
+++ b/InversePower/InversePower.ini
@@ -1,9 +1,11 @@
 [CONFIG]
 Power = 100
-Torque = 100
-Angle = 300
+Torque = 80
+Angle = 350
 Speed = 200
 Slope = 35
 
 [DEBUG]
 Debug = 0
+DisableP = 0
+DisableT = 0
