--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,20 @@
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
+# Build results
+[Bb]in/
+[Oo]bj/
+[Dd]ebug/
+[Ll]og/
+[Tt]mp/
 
-# Folder config file
-Desktop.ini
+# Visual Studio cache files
+ipch/
+*.aps
+*.cachefile
+*.opendb
+*.opensdf
+*.user
+*.sdf
+*.suo
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# =========================
-# Operating System Files
-# =========================
-
-# OSX
-# =========================
-
+# Temporary OS files
 .DS_Store
-.AppleDouble
-.LSOverride
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+Thumbs.db
