--- a/InversePower/InversePower.vcxproj.filters
+++ b/InversePower/InversePower.vcxproj.filters
@@ -6,16 +6,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="script.h" />
-    <ClInclude Include="..\..\inc\enums.h">
+    <ClInclude Include="..\..\ScriptHookV_SDK\inc\enums.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\inc\main.h">
+    <ClInclude Include="..\..\ScriptHookV_SDK\inc\main.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\inc\natives.h">
+    <ClInclude Include="..\..\ScriptHookV_SDK\inc\natives.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\inc\types.h">
+    <ClInclude Include="..\..\ScriptHookV_SDK\inc\types.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
